add id, add to script to split out, update index ui.

--- a/scratch/index.html
+++ b/scratch/index.html
@@ -15,8 +15,12 @@
 			function updateAndReturn(item, data) {
 				item.style = '';
 
+				const dataItemId = item.getAttribute('data-item-id')
+
 				const cData = [
-					c => ({ ...c, [item.className]: item.innerText })
+					c => ({ ...c, [item.className]: item.innerText }),
+					c => (dataItemId ? { ...c, 'data-item-id': dataItemId } : c)
+					//updated here.
 
 				].reduce(reducer, data || {})
 
